syntax = "proto3";
option java_multiple_files = true;
option java_package = "bdsql.consensus.rpc";
option java_outer_classname = "RaftProto";


service Raft {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message RequestVoteRequest {
  string candidateId = 1;
  int64 term = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
}

message LogEntry {
  int64 index = 1;
  int64 term = 2;
  bytes data = 3;
}

message AppendEntriesRequest {
  string leaderId = 1;
  int64 term = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
}